[gd_scene load_steps=9 format=2]

[ext_resource path="res://Screens/GameOver/game_over.tres" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Fonts/game_robot/GAME ROBOT-Light.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Music/completed.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Images/LEVEL-COMPLETED.png" type="Texture" id=4]
[ext_resource path="res://Screens/LevelCompleted/LevelCompleted.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
use_filter = true
font_data = ExtResource( 2 )

[node name="LevelCompleted" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -749, -163 )
script = ExtResource( 5 )

[node name="Gameover" type="Sprite" parent="."]
position = Vector2( 952, 358 )
scale = Vector2( 2.19737, 2.18 )
texture = ExtResource( 4 )

[node name="VBoxGameOver" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -338.0
margin_top = -61.0
margin_right = 338.0
margin_bottom = 454.0
alignment = 1

[node name="RespawnButton" type="Button" parent="VBoxGameOver"]
margin_top = 146.0
margin_right = 676.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 1 )
action_mode = 0
text = "Next Level"

[node name="MainMenu" type="Button" parent="VBoxGameOver"]
margin_top = 224.0
margin_right = 676.0
margin_bottom = 294.0
custom_fonts/font = SubResource( 2 )
text = "Main Menu"

[node name="ExitGame" type="Button" parent="VBoxGameOver"]
margin_top = 298.0
margin_right = 676.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 3 )
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="pressed" from="VBoxGameOver/RespawnButton" to="." method="_on_RespawnButton_pressed"]
[connection signal="pressed" from="VBoxGameOver/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxGameOver/ExitGame" to="." method="_on_ExitGame_pressed"]
